--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@e9aba2c848f5ebd159c070c61ea2c4e2b122355e # v2
       with:
-        python-version: 3.7
+        python-version: 3.10
     - name: Restore cache
       uses: actions/cache@f5ce41475b483ad7581884324a6eca9f48f8dcc7 # v1
       with:
         path: .venv
-        key: py3.7-ubuntu-latest-venv-cache-${{ hashFiles('**/poetry.lock') }}
+        key: py3.10-ubuntu-latest-venv-cache-${{ hashFiles('**/poetry.lock') }}
     - name: Install poetry
       run: |
         pip install poetry>=1.5.0
@@ -96,7 +96,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.10', '3.11']
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -121,7 +121,6 @@ jobs:
         poetry build -f wheel
         poetry run pip install --ignore-installed dist/*
     - name: Run tests
-      if: ${{matrix.python-version!='3.7'}}
       run: poetry run pytest -n 4 --mypy-ini-file=tests/mypy.ini
     - name: Upload wheel
       uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4
@@ -138,12 +137,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@e9aba2c848f5ebd159c070c61ea2c4e2b122355e # v2
       with:
-        python-version: 3.7
+        python-version: 3.10
     - name: Restore cache
       uses: actions/cache@f5ce41475b483ad7581884324a6eca9f48f8dcc7 # v1
       with:
         path: .venv
-        key: py3.7-ubuntu-latest-venv-cache-${{ hashFiles('**/poetry.lock') }}
+        key: py3.10-ubuntu-latest-venv-cache-${{ hashFiles('**/poetry.lock') }}
     - name: Install poetry
       run: |
         pip install poetry>=1.5.0
